See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.94.00

              Add pamhomography:  Thanks Scott Pakin.

              pamtowinicon: Add BMP/PNG encoding to verbose output.

              libnetpbm: pm_system: Fix bug: standard input feeder process
              repositions unrelated files.  Always broken (pm_system was new
              in Netpbm 10.13 (September 2003).

              Pamtowinicon: Fix crash or incorrect output with PNG encoding
              (result of pm_system bug above).  Always broken (Pamtowinicon
              was new in Netpbm 10.63 (June 2013).

20.12.28 BJH  Release 10.93.00

              pamarith: Add -equal.

              pamarith: Allow more than two operands for functions for which
              it makes sense (all but -subtract, -difference, -compare,
              -divide, -shiftleft, and -shiftright).

              pamrith: fail if operand images have different depth and not
              depth 1.

              ppmshift: Add -seed .

              pamaddnoise: Fix incorrect output for -type poisson.  Always
              broken.  (pamaddnoise was new to Netpbm in Netpbm 10.29 (August
              2005)).

              pamaddnoise: fix bug: garbage output with -type impulse.  Always
              broken (pamaddnoise's precursors pnmaddnoise was new to Netpbm
              in Netpbm 10.29 (August 2005).

20.09.26 BJH  Release 10.92.00

              pnmcrop: Make -margin effective with -blank-image=minimize.

              pnmnorm: With bounds specified as -bpercent or -bsingle and
              -wpercent or -wsingle, and the image has only one brightness,
              don't attempt any normalization - leave image as is.  (Previous
              version produces all black with -keephues).

              pgmtopbm: Add -randomseed.

              pamfunc: Fix always wrong output with -not.  Always broken.